[package]
name = "panic-serial-example"
version = "0.1.0"
authors = ["Niklas Cathor <niklas.cathor@gmx.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "panic-serial-example"
test = false
bench = false

[dependencies]
panic-serial = { path = "../panic-serial", features = ["full"] }
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
